# embedder_cpp

./: .gitignore  AKNOWLEDGEMENTS.md  CMakeLists.txt  LICENSE  README.md  _main.cpp  build_rel.bat  build_rel.sh  build_rel_mac.sh  db_metadata.db  db_metadata.db-journal  dist.7z  main.cpp  package-lin.sh  package-mac.sh  package.bat  package.sh  settings - Copy.json  settings.json  settings.template.json  version.cmake
.github/workflows/: build.yml
assets/: QUICKSTART  README  settings.template.json
include/: app.h  auth.h  chunker.h  database.h  httpserver.h  inference.h  instregistry.h  settings.h  sourceproc.h  tokenizer.h
public/setup/: index.html
scripts/: install-service.bat  install-service.sh  start.bat  start.sh  stop.bat  stop.sh  uninstall-service.bat  uninstall-service.sh
src/: app.cpp  auth.cpp  chunker.cpp  database.cpp  httpserver.cpp  inference.cpp  instregistry.cpp  main.cpp  settings.cpp  sourceproc.cpp  tokenizer.cpp
ui/: README.md
ui/clients/spa-svelte/src/lib/widgets/: ChatPanel.svelte
ui/clients/webview/: CMakeLists.txt  README.md  appconfig.json  build.sh  build_rel.bat  build_rel.sh  build_rel_mac.sh
ui/clients/webview/assets/: appconfig.json
ui/clients/webview/src/: main.cpp  wb.cpp  wb.h  wb.mm
ui/dashboard/spa-svelte/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/dashboard/spa-svelte/src/: App.svelte  app.css  app.d.ts  global.d.ts
ui/dashboard/spa-svelte/src/lib/: store.ts  utils.ts
ui/dashboard/spa-svelte/src/lib/widgets/: CentralInstances.svelte  CentralProjects.svelte  CentralSettings.svelte  CentralWidget.svelte  ConfigPanel.svelte  ProjectPanel.svelte  Statusbar.svelte  Toolbar.svelte
ui/dashboard/spa-svelte/src/lib/widgets/misc/: DetailRow.svelte  InstanceInfo.svelte  StatCard.svelte  UpDownButton.svelte
ui/dashboard/spa-svelte/src/lib/widgets/project-panels/: Chunking.svelte  Database.svelte  Embedding.svelte  Generation.svelte  Instance.svelte  JSON.svelte  Logging.svelte  Source.svelte  Tokenizer.svelte
ui/dashboard/webview/: CMakeLists.txt  admconfig.json  build_rel.bat  build_rel.sh
ui/dashboard/webview/assets/: admconfig.json
ui/dashboard/webview/assets/phenixcode_projects/: proj-refs.json  settings.json
ui/dashboard/webview/src/: main.cpp
ui/shared/: procmngr.h  utils.cpp  utils.h  wb.cpp  wb.h
